[package]
name = "intricase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["form", "http1", "http2", "json", "macros", "multipart", "query", "tokio", "tower-log", "tracing"] }
axum-extra = { version = "0.9.3", features = ["async-read-body", "cookie", "cookie-key-expansion", "cookie-private", "cookie-signed", "form", "multipart", "query"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
handlebars = { version = "5.1.2", features = ["dir_source"] }
lettre = { version = "0.11.7", default-features = false, features = ["builder", "rustls-tls", "smtp-transport", "tokio1", "tokio1-rustls-tls", "tracing"] }
serde = "1.0.202"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ts-rs = { version = "8.1.0", features = ["chrono-impl", "serde-json-impl", "uuid-impl"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "macro-diagnostics", "serde", "v7"] }
zxcvbn = "3.0.1"

[profile.dev.package.sqlx-macros]
# speed up incremental compile-time sql checks
opt-level = 3
