[package]
name = "intricase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["form", "http1", "http2", "json", "macros", "multipart", "query", "tokio", "tower-log", "tracing"] }
axum-extra = { version = "0.9.6", features = ["async-read-body", "cookie", "cookie-key-expansion", "cookie-private", "cookie-signed", "form", "multipart", "query"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
handlebars = { version = "6.3.0", features = ["dir_source"] }
lettre = { version = "0.11.11", default-features = false, features = ["builder", "rustls-tls", "smtp-transport", "tokio1", "tokio1-rustls-tls", "tracing"] }
serde = "1.0.217"
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = { version = "10.1.0", features = ["chrono-impl", "serde-json-impl", "uuid-impl"] }
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4", "macro-diagnostics", "serde", "v7"] }
zxcvbn = "3.1.0"

[profile.dev.package.sqlx-macros]
# speed up incremental compile-time sql checks
opt-level = 3
